Wed Aug 12 20:19:08 1998  Tom Yu  <tlyu@mit.edu>

	* alt_prof.c (krb5_read_realm_params): Use
	"kdc_supported_enctypes" instead of "supported_enctypes" so that
	the KDC and the kadmind will use different enctype lists.

Wed Jul  8 04:48:50 1998  Geoffrey J. King  <gjking@mit.edu>

	* logger.c: Add the function krb5_klog_reopen() which closes
	        and reopens the log files.

Mon Apr  6 19:40:05 1998  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in (includes): Don't call mkdir unless the directory
 	exists.

Fri Feb 27 22:30:41 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Move tests from all of kadm5's subdirectories into
		this configure.in, and make it generate makefiles for all
		of the subdirectories.

	* Makefile.in: Add a LOCAL_SUBDIRS macro for all subdirectories in
		the kadm5 library.

Wed Feb 25 15:00:10 1998  Ezra Peisach  <epeisach@mit.edu>

	* alt_prof.c (krb5_free_realm_params): Free realm_acl_file portion
	of structure. 

Wed Feb 18 16:13:56 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Fri Feb 13 21:33:27 1998  Tom Yu  <tlyu@mit.edu>

	* admin.h:
	* kadm_rpc.h:
	* kadm_rpc_xdr.c: Update header locations.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Jan 28 16:32:36 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in, Makefile.in: Remove the CopySrcHeader and
		CopyHeader macros from configure.in and substitute
		equivalent functionality in Makefile.in

Tue Jan 20 23:06:36 1998  Tom Yu  <tlyu@mit.edu>

	* alt_prof.c (kadm5_get_config_params): Add support for Cygnus chpw.

	* admin.h: Add support for Cygnus chpw.

Mon Oct 13 10:48:24 1997  Ezra Peisach  <epeisach@mit.edu>

	* alt_prof.c (kadm5_get_config_params): When KADM5_CONFIG_ENCTYPES
           is set on the input parameters, allocate a new copy of the