@@ -1,3 +1,8 @@
+Thu Aug 13 17:21:06 1998  Tom Yu  <tlyu@mit.edu>
+
+	* alt_prof.c (krb5_read_realm_params): Fix to check
+	"supported_enctypes" if "kdc_supported_enctypes" isn't there.
+
 Wed Aug 12 20:19:08 1998  Tom Yu  <tlyu@mit.edu>
 
 	* alt_prof.c (krb5_read_realm_params): Use
